# rustNPS

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  REVIEW.md  openapi_v1.yaml  package-lock.json  package.json
src/: error.rs  handlers.rs  lib.rs  main.rs  openapi_v1.yaml  payloads.rs  routes.rs  segment.rs
src/db/: mod.rs  nps_entry.rs
src/handlers/: create.rs  dismiss.rs  index.rs  mod.rs  stats.rs
tests/: create.rs  dismiss.rs  index.rs
