[package]
name = "rust_nps"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["tokio", "tracing", "http2", "json"] }
axum-extra = { version = "0.12", features = ["cookie"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde-helpers = "0.1"
serde_with = { version = "3", features = ["json", "hex", "macros"] }
serde_json = "1"
bson = { version = "3", features = ["chrono-0_4", "serde", "serde_with-3"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
mongodb = { version = "3", features = ["bson-3"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.13", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
validator = { version = "0.20", features = ["derive"] }
futures = "0.3"
handlers = "0.10.0"

[dev-dependencies]
anyhow = "1"
axum-test = "20"
